[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Radio.gd" type="Script" id=1]
[ext_resource path="res://BGMusic/Cyberounk_Jam_-_Cyber_Blues_.ogg" type="AudioStream" id=2]
[ext_resource path="res://BGMusic/Cyber_Jam_-_Police_Station_Theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://BGMusic/Cyberpunk_Jam_-_Intro_Theme_Rough_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://BGMusic/Cyberpunk_Jam_-_Nightfall.ogg" type="AudioStream" id=5]
[ext_resource path="res://UI/radio/prevNormal.png" type="Texture" id=6]
[ext_resource path="res://UI/radio/prevHover.png" type="Texture" id=7]
[ext_resource path="res://UI/radio/playNormal.png" type="Texture" id=8]
[ext_resource path="res://UI/radio/playHover.png" type="Texture" id=9]
[ext_resource path="res://UI/radio/pauseNormal.png" type="Texture" id=10]
[ext_resource path="res://UI/radio/pauseHover.png" type="Texture" id=11]
[ext_resource path="res://UI/radio/nextNormal.png" type="Texture" id=12]
[ext_resource path="res://UI/radio/nextHover.png" type="Texture" id=13]
[ext_resource path="res://UI/radio/volumeBack.png" type="Texture" id=14]
[ext_resource path="res://UI/radio/volumeFront.png" type="Texture" id=15]

[node name="Radio" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tracks" type="Node" parent="."]

[node name="Sinner Blues" type="AudioStreamPlayer" parent="Tracks"]
stream = ExtResource( 2 )
volume_db = -9.0
bus = "Music"

[node name="Police Station" type="AudioStreamPlayer" parent="Tracks"]
stream = ExtResource( 3 )
volume_db = -9.0
bus = "Music"

[node name="Ghost Town" type="AudioStreamPlayer" parent="Tracks"]
stream = ExtResource( 4 )

[node name="Nightfall" type="AudioStreamPlayer" parent="Tracks"]
stream = ExtResource( 5 )
volume_db = -9.0
bus = "Music"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 32.0

[node name="PrevButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="PauseButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="NextButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 144.0
margin_right = 582.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
ticks_on_borders = true

[node name="VolumeDisplay" type="TextureProgress" parent="HBoxContainer"]
margin_left = 586.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 50.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )

[node name="TrackName" type="Label" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
text = "Music"
align = 1
[connection signal="pressed" from="HBoxContainer/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
